# ai_novel_engine

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  run_config.yaml  ui_dashboard.py
clients/: robust_caller.py
config/prompts_template/: system_prompts.yaml.example
data/: my_outline.txt
engine/: context_assembler.py  generator_architect.py  generator_chapter.py  orchestrator.py  plot_enforce.py  plot_enforcer.py  plot_evolver.py
memory/: recap_manager.py  state_tracker.py  vector_db_client.py
prompts/: super_prompt.md
utils/: logger_setup.py
